--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,14 +16,14 @@
       <div class="col justify-content-center text-center">
         <br/>
         <p><i>Synthesized with TTSReader on Edge browser</i></p>
-        <div>Christopher - <audio style="vertical-align: middle" controls src="https://ttsreader.com/player/audio/Christopher.mp3" preload="metadata"/></div>
-        <div>Michelle - &nbsp;&nbsp;&nbsp;&nbsp;<audio controls src="https://ttsreader.com/player/audio/Michelle.mp3" preload="metadata"/></div>
+        <div>Christopher - <audio style="vertical-align: middle" controls src="{{ .Site.Params.links.audioSampleChristopher }}" preload="metadata"/></div>
+        <div>Michelle - &nbsp;&nbsp;&nbsp;&nbsp;<audio controls src="{{ .Site.Params.links.audioSampleMichelle }}" preload="metadata"/></div>
       </div>
       <div class="col justify-content-center text-center">
         <br/>
         <p><i>Synthesized with TTSReader on Chrome browser</i></p>
-        <div>Noah - <audio controls src="https://ttsreader.com/player/audio/Noah.mp3" preload="metadata"></audio></div>
-        <div>Lily - &nbsp;&nbsp;<audio controls src="https://ttsreader.com/player/audio/Lily.mp3" preload="metadata"></audio></div>
+        <div>Noah - <audio controls src="{{ .Site.Params.links.audioSampleNoah }}" preload="metadata"></audio></div>
+        <div>Lily - &nbsp;&nbsp;<audio controls src="{{ .Site.Params.links.audioSampleLily }}" preload="metadata"></audio></div>
         <br/>
       </div>
 
