added plugin to all but front page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,5 +32,10 @@
       <a id="toTop" href="#" class="btn btn-outline-primary rounded-circle ms-auto p-2" style="pointer-events: all"><span class="visually-hidden">Top</span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-up"><polyline points="18 15 12 9 6 15"></polyline></svg></a>
     </div>
     {{ end }}
+
+    {{ if eq .Kind "home" -}}
+    {{ else -}}
+      {{ partial "footer/plugin.html" . }}
+    {{ end -}}
   </body>
 </html>
