added the plugin!

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -162,17 +162,17 @@
     </div>
     <div class="row justify-content-center text-center" style="max-width: 100%;margin: auto;">
       <div class="col-sm card" style="display: flex;flex-direction: column">
-        <h3 class="h4">Android app</h3>
-        <p>TTSReader for Android. Includes exporting audio to mp3 files.</p>
+        <h3 class="h4">Mobile app</h3>
+        <p>TTSReader for mobile - iOS or Android. Includes exporting audio to mp3 files.</p>
         <div style="flex: 1;min-height: 10px;"></div>
-        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.androidApp }}" role="button" onclick="gtag('event', 'ttsreader_click_androidApp_body', {'value': 'home_page_body'});">Get it on Google Play{{ i18n "start-dictating" }}</a>
+        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="/mobile/" role="button" onclick="gtag('event', 'ttsreader_click_mobile_body', {'value': 'home_page_body'});">Get it on Google Play{{ i18n "start-dictating" }}</a>
         <br/>
       </div>&nbsp;&nbsp;
       <div class="col-sm card" style="display: flex;flex-direction: column">
-        <h3 class="h4">iOS app</h3>
-        <p>TTSReader (Simple Text Reader) for iOS, works great on iPhones, iPads & Macs.</p>
+        <h3 class="h4">NEW 🚀 - TTS Plugin</h3>
+        <p>Make your own website speak your content - with a single line of code. Hassle free.</p>
         <div style="flex: 1;min-height: 10px;"></div>
-        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.iosApp }}" role="button" onclick="gtag('event', 'ttsreader_click_iosApp_body', {'value': 'home_page_body'});">Get it on the App Store{{ i18n "start-dictating" }}</a>
+        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="/plugin/" role="button" onclick="gtag('event', 'ttsreader_click_iosApp_body', {'value': 'home_page_body'});">Get the TTS-Plugin{{ i18n "start-dictating" }}</a>
         <br/>
       </div>&nbsp;&nbsp;
       <div class="col-sm card" style="display: flex;flex-direction: column">
