--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,38 @@
 {{ define "main" }}
 
+
 <section class="section container-fluid mt-n3 pb-3">
+  <h1 class="mt-0 text-center">{{ .Title }}</h1>
   <div class="row justify-content-center">
-    <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
-      <p class="caption-top"><i>~ Proudly serving millions of users since 2015 ~</i></p>
+    <div class="text-center">
+      <p class="caption-top"><i>Proudly serving millions of users since 2015</i></p>
       <h2 class="lead" style="font-size: 1.3em;">{{ .Params.lead | safeHTML }}</h2>
-      <a style="display: block;width: 400px;margin: 40px auto;max-width: 100%;" class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.player }}" role="button" onclick="gtag('event', 'ttsreader_click_new_body', {'value': 'home_page_body'});">Get Started{{ i18n "start-dictating" }}</a>
-      <p class="meta"><a href="player/">Start text-to-speech</a> for free, or keep scrolling to learn more & see additional solutions.</p>
+
+      <div class="row justify-content-center text-center" style="margin-top: 20px;">
+        <p class="quote">I need to ></p>
+        <div class="col-md-7 col-lg-6 card">
+          <div class="text-center" style="margin-top: 30px;margin-bottom: -20px;"><svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiBox-root css-1om0hkc" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="MicIcon"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path></svg></div>
+          <h2 class="h4">Read Text Out Loud</h2>
+          <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.player }}" role="button" onclick="gtag('event', 'speechnotes_click_player_main', {'value': 'home_page_body'});">Start Text Player{{ i18n "start-dictating" }}</a>
+          <p class="meta">Best in class text to speech reader. Input text or upload file and click play. Editable text, state persistence, supports plain text, files, books & webpages.</p>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-7 col-lg-6 card">
+          <div class="text-center" style="margin-top: 30px;margin-bottom: -20px;"><svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiBox-root css-1om0hkc" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="AudioFileOutlinedIcon"><path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6zm10-9h-4v3.88c-.36-.24-.79-.38-1.25-.38-1.24 0-2.25 1.01-2.25 2.25S9.51 19 10.75 19 13 17.99 13 16.75V13h3v-2z"></path></svg></div>
+          <h2 class="h4">Create Voice Overs (mp3, mp4)</h2>
+          <a target="_blank" rel="nofollow" class="btn btn-secondary btn-lg px-4 mb-2" href="{{ .Site.Params.links.speechify_voiceover }}" role="button" onclick="gtag('event', 'ttsreader_click_speechify_voiceover_main', {'value': 'home_page_body'});">Start Voice Over<sup style="font-size: 11px;
+    color: orangered;
+    font-weight: bold;
+    position: relative;
+    top: -9px;"><i>&nbsp;Partner</i></sup>{{ i18n "start-transcribing" }}</a>
+          <p class="meta" style="">Generate unlimited professional voice overs in minutes. Combine voices, speed, intonations, background music & more. The generated mp3 belongs to you.</p>
+        </div>
+      </div>
     </div>
   </div>
 
-    <div class="row text-center" style="margin: 40px auto;">
-      <p style="font-size: 1.2em;">How good does it sound? Outstanding! Want to hear for yourself? Here are a few samples:</p>
+    <!--<div class="row text-center" style="margin: 40px auto;">
+      <p style="font-size: 1.2em;">Natural sounding AI voices are available - here are a few samples</p>
       <div class="col justify-content-center text-center">
         <br/>
         <p><i>Synthesized with TTSReader on Edge browser</i></p>
@@ -28,7 +48,7 @@
       </div>
 
       <p style="font-size: 1.2em;margin-top: 40px;">Ready to start? <a href="/player/">Click here for our main text-to-speech reader</a>, or take a look at our complementary text-to-speech solutions including our experimental (please tell us what you think) <a href="/stories/" style="text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px yellow, 0 0 20px yellow, 0 0 25px yellow, 0 0 30px yellow, 0 0 35px yellow;color: red;font-weight:bold;padding: 3px 10px;border-radius: 10px;display: inline-block;">NEW STORIES 📚</a> read-along >></p>
-    </div>
+    </div>-->
 
 </section>
 
@@ -42,7 +62,7 @@
 {{ define "sidebar-prefooter" }}
   {{ if eq $.Site.Language.LanguageName "English" }}
 
-<section id="stories" class="section section-sm">
+<!--<section id="stories" class="section section-sm">
   <div style="max-width: 95%;padding: 0 20px;margin: auto;">
     <div class="row justify-content-center text-center">
       <h3>Listen to Stories 📚</h3>
@@ -86,7 +106,7 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 
 
 <section id="portfolio" class="section section-sm">
@@ -97,16 +117,20 @@
 
     <div class="col-md-5 col-sm-8 card">
       <br/>
-      <a target="_blank" rel="nofollow" style="color: white;background:linear-gradient(119.6deg,#fe40fe 9.06%,#fe25a3 49.04%,#fe5435 93.41%);" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.unreal_studio }}" role="button" onclick="gtag('event', 'ttsreader_click_unreal_studio_body', {'value': 'home_page_body'});">Voice-Over Studio&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
+      <a target="_blank" rel="nofollow" style="color: white;background:linear-gradient(119.6deg,#fe40fe 9.06%,#fe25a3 49.04%,#fe5435 93.41%);" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.audioread }}" role="button" onclick="gtag('event', 'ttsreader_click_audioread_body', {'value': 'home_page_body'});">Text To Podcast<sup style="font-size: 11px;
+    color: lightgoldenrodyellow;
+    font-weight: bold;
+    position: relative;
+    top: -9px;"><i>&nbsp;Partner</i></sup>&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
       <br/>
-      <a target="_blank" href="{{ .Site.Params.links.unreal_studio }}" rel="nofollow" onclick="gtag('event', 'ttsreader_click_unreal_studio_body', {'value': 'home_page_body'});"><div class="Preview-img" style="background-image: url('/images/screenshots/home/unreal_studio.webp');"></div></a>
+      <a target="_blank" href="{{ .Site.Params.links.audioread }}" rel="nofollow" onclick="gtag('event', 'ttsreader_click_audioread_body', {'value': 'home_page_body'});"><div class="Preview-img" style="background-image: url('/images/screenshots/home/audioread.webp');"></div></a>
       <br/>
-      <p class="meta">By our partner UnrealSpeech, Voice-Over Studio brings you original AI voices, as well as the ability to quickly generate & download mp3 files for personal or professional purposes.</p>
+      <p class="meta">Turns your articles, PDFs, emails, etc. into podcasts, so you can listen to it on your own podcast player when convenient, with all the advantages that come with your podcast app.</p>
     </div>
     &nbsp;&nbsp;
     <div class="col-md-5 col-sm-8 card">
       <br/>
-      <a target="_blank" style="color: white;background-color: #5d2f86" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.speechninja }}" role="button" onclick="gtag('event', 'ttsreader_click_speechninja_body', {'value': 'home_page_body'});">SpeechNinja - Type to Speak&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
+      <a target="_blank" style="color: white;background-color: #5d2f86" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.speechninja }}" role="button" onclick="gtag('event', 'ttsreader_click_speechninja_body', {'value': 'home_page_body'});">Type to Speak&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
       <br/>
       <a target="_blank" href="{{ .Site.Params.links.speechninja }}" onclick="gtag('event', 'ttsreader_click_speechninja_body', {'value': 'home_page_body'});"><div class="Preview-img" style="background-image: url('/images/screenshots/home/speechninja.webp');"></div></a>
       <br/>
@@ -115,7 +139,7 @@
     &nbsp;&nbsp;
     <div class="col-md-5 col-sm-8 card">
       <br/>
-      <a style="color: white;background-color: #39a7bb" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.legacy }}" role="button" onclick="gtag('event', 'ttsreader_click_retro_body', {'value': 'home_page_body'});">legacy player&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
+      <a style="color: white;background-color: #39a7bb" class="btn btn-lg px-4 mb-2" href="{{ .Site.Params.links.legacy }}" role="button" onclick="gtag('event', 'ttsreader_click_retro_body', {'value': 'home_page_body'});">Legacy Player&nbsp;&rarr;{{ i18n "start-transcribing" }}</a>
       <br/>
       <a href="{{ .Site.Params.links.legacy }}" onclick="gtag('event', 'ttsreader_click_retro_body', {'value': 'home_page_body'});"><div class="Player-preview-img-legacy" style=""></div></a>
       <br/>
@@ -139,10 +163,10 @@
   <div class="bg-light" style="max-width: 95%;padding: 0 20px;margin: auto;border-radius: 20px;">
     <div class="row justify-content-center text-center" style="max-width: 100%;margin: auto;">
       <div class="col-sm card" style="display: flex;flex-direction: column">
-        <h3 class="h4">Legacy Player</h3>
-        <p>Our <a href="/legacy/">good old player</a>, served millions of users over the years. In case you miss it - it's still here.</p>
+        <h3 class="h4">Books & Stories</h3>
+        <p>Listen to some of the best stories ever written. We have them right here. Want to upload your own? Use the main player to upload epub files.</p>
         <div style="flex: 1;min-height: 10px;"></div>
-        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.legacy }}" role="button" onclick="gtag('event', 'ttsreader_click_legacy_body', {'value': 'home_page_body'});">Legacy player{{ i18n "start-dictating" }}</a>
+        <a class="btn btn-outline-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.stories }}" role="button" onclick="gtag('event', 'ttsreader_click_stories_body', {'value': 'home_page_body'});">Start Stories{{ i18n "start-dictating" }}</a>
         <br/>
       </div>&nbsp;&nbsp;
       <div class="col-sm card" style="display: flex;flex-direction: column">
