--- a/layouts/index.html
+++ b/layouts/index.html
@@ -276,6 +276,122 @@
   </div>
 </section>
 
+<section class="bar background-white" id="speech-to-text-features">
+  <br>
+  <div class="container text-center">
+    <div class="heading text-center">
+      <h2>Main Features</h2>
+    </div>
+
+    <div class="box-simple" style="min-height: auto;max-width: 700px;margin: auto">
+      <h3>TTSReader is a free Text to Speech Reader that supports all modern browsers, including Chrome, Firefox and Safari.</h3>
+      <p>
+        Includes multiple languages and accents. If on Chrome - you will get access to Google's voices as well. Super easy to use - no download, no login required. Here are some more features
+      </p>
+
+      <br>
+    </div>
+
+
+
+
+      <div class="row justify-content-center text-center">
+        <br>
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
+            </div>
+            <h3>Fun, Online, Free. Listen to great content</h3>
+            <p>Drag, drop &amp; play (or directly copy text &amp; play). That’s it. No downloads. No logins. No passwords. No fuss. Simply fun to use and listen to great content. Great for listening in the background. Great for proof-reading. Great for kids and more. <a href="/blog/2017/05/10/ttsreader/">Learn more, including a YouTube we made, here</a>.
+
+            </p>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+            </div>
+            <h3>Multilingual, Natural Voices</h3>
+            <p>We facilitate high-quality natural-sounding voices from different sources. There are male &amp; female voices, in different accents and different languages. Choose the voice you like, insert text, click play to generate the synthesized speech and enjoy listening.
+
+            </p>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span>
+            </div>
+            <h3>Exit, Come Back &amp; Play from Where You Stopped</h3>
+            <p>TTSReader remembers the article and last position when paused, even if you close the browser. This way, you can come back to listening right where you previously left. Works on Chrome &amp; Safari on mobile too. Ideal for listening to articles.
+
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+
+
+      <div class="row justify-content-center text-center">
+        <br>
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
+            </div>
+            <h3>Vs. Recorded Podcasts</h3>
+            <p>In many aspects, synthesized speech has advantages over recorded podcasts. Here are some: First of all - you have unlimited - free - content. That includes high-quality articles and books, that are not available on podcasts. Second - it’s free. Third - it uses almost no data - so it’s available offline too, and you save money. If you like listening on the go, as while driving or walking - get our free <strong><a href="/blog/2017/05/10/ttsreaderdroid/">Android Text Reader App</a></strong>.
+
+            </p>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+            </div>
+            <h3>Read PDF Files, Texts &amp; Websites</h3>
+            <p>TTSReader extracts the text from pdf files, and reads it out loud. Also useful for simply copying text from pdf to anywhere. In addition, it highlights the text currently being read - so you can follow with your eyes. If you specifically want to listen to websites - such as blogs, news, wiki - you should get our free <strong><a href="/blog/2017/05/10/ttsreaderx/">extension for Chrome</a></strong>
+
+            </p>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-5">
+          <div class="box-simple">
+            <div class="icon">
+              <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            </div>
+            <h3>Export Speech to Audio Files</h3>
+            <p>TTSReader enables exporting the synthesized speech to mp3 audio files. This is available currently only on Windows, and requires ttsreader’s <a href="/upgrade/" target="_blank">premium</a>.
+
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+
+  </div>
+</section>
+
+
   <section id="pricing" class="section section-sm">
   <br/><br/>
   <div class="container">
