--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,11 +12,11 @@
         <p class="quote">I need to ></p>
         <div class="col-md-7 col-lg-6 card">
           <div class="text-center" style="margin-top: 30px;margin-bottom: -20px;"><svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiBox-root css-1om0hkc" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="MicIcon"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path></svg></div>
-          <h2 class="h4">Read Text Out Loud</h2>
-          <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.player }}" role="button" onclick="gtag('event', 'speechnotes_click_player_main', {'value': 'home_page_body'});">Start Text Player{{ i18n "start-dictating" }}</a>
-          <p class="meta">Best in class text to speech reader. Input text or upload file and click play. Editable text, state persistence, supports plain text, files, books & webpages.</p>
+          <h2 class="h4">Listen to Text and / or <br/>Generate Speech from Text</h2>
+          <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.player }}" role="button" onclick="gtag('event', 'speechnotes_click_player_main', {'value': 'home_page_body'});">Start Text Player & Synthesizer{{ i18n "start-dictating" }}</a>
+          <p class="meta">Best in class text to speech reader & synthesizer. Input text or upload file and click play. Editable text, state persistence, supports plain text, files, books & webpages. Includes recorder to download mp3 audio files if needed.</p>
         </div>
-        <div class="col-md-1"></div>
+        <!--<div class="col-md-1"></div>
         <div class="col-md-7 col-lg-6 card">
           <div class="text-center" style="margin-top: 30px;margin-bottom: -20px;"><svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiBox-root css-1om0hkc" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="AudioFileOutlinedIcon"><path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6zm10-9h-4v3.88c-.36-.24-.79-.38-1.25-.38-1.24 0-2.25 1.01-2.25 2.25S9.51 19 10.75 19 13 17.99 13 16.75V13h3v-2z"></path></svg></div>
           <h2 class="h4">Create Voice Overs (mp3, mp4)</h2>
@@ -26,7 +26,7 @@
     position: relative;
     top: -9px;"><i>&nbsp;Partner</i></sup>{{ i18n "start-transcribing" }}</a>
           <p class="meta" style="">Generate unlimited professional voice overs in minutes. Combine voices, speed, intonations, background music & more. The generated mp3 belongs to you.</p>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
