--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
       <div id="avatars_demos_id" class="row justify-content-center text-center" style="margin-top: 20px;">
         <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="john">
           <div style="position: relative; display: inline-block;">
-            <img src="/images/avatars/anglo_m_200x.webp" alt="TTSReader Voice Avatar - John" title="Click to listen to John" />
+            <img src="/images/avatars/anglo_m_200x.webp" alt="TTSReader Voice Avatar Male USA - John" title="Click to listen to John" />
             <div class="play-overlay" style="left: unset; top: unset; opacity: 1; right: -15px; bottom: -5px; transform: none; width: 50px; height: 50px;">
               <div class="play-button-svg-container" style="opacity: 1">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="34"  height="34"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-player-play"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" /></svg>
@@ -47,9 +47,9 @@
             <div class="bar"></div>
           </div>
         </div>
-        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="john">
+        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="aria">
           <div style="position: relative; display: inline-block;">
-            <img src="/images/avatars/indi_f_200x.webp" alt="TTSReader Voice Avatar - John" title="Click to listen to John" />
+            <img src="/images/avatars/indi_f_200x.webp" alt="TTSReader Voice Avatar Female - Aria" title="Click to listen to Aria" />
             <div class="play-overlay" style="left: unset; top: unset; opacity: 1; right: -15px; bottom: -5px; transform: none; width: 50px; height: 50px;">
               <div class="play-button-svg-container" style="opacity: 1">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="34"  height="34"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-player-play"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" /></svg>
@@ -84,9 +84,9 @@
             <div class="bar"></div>
           </div>
         </div>
-        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="john">
+        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="adam">
           <div style="position: relative; display: inline-block;">
-            <img src="/images/avatars/afro_m_200x.webp" alt="TTSReader Voice Avatar - John" title="Click to listen to John" />
+            <img src="/images/avatars/afro_m_200x.webp" alt="TTSReader Voice Avatar Male - Adam" title="Click to listen to Adam" />
             <div class="play-overlay" style="left: unset; top: unset; opacity: 1; right: -15px; bottom: -5px; transform: none; width: 50px; height: 50px;">
               <div class="play-button-svg-container" style="opacity: 1">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="34"  height="34"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-player-play"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" /></svg>
@@ -121,9 +121,9 @@
             <div class="bar"></div>
           </div>
         </div>
-        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="john">
+        <div class="avatar-container-tile col-sm-4"  data-ws-avatar-id="Nova">
           <div style="position: relative; display: inline-block;">
-            <img src="/images/avatars/anglo_f_200x.webp" alt="TTSReader Voice Avatar - John" title="Click to listen to John" />
+            <img src="/images/avatars/anglo_f_200x.webp" alt="TTSReader Voice Avatar Female - Nova" title="Click to listen to Nova" />
             <div class="play-overlay" style="left: unset; top: unset; opacity: 1; right: -15px; bottom: -5px; transform: none; width: 50px; height: 50px;">
               <div class="play-button-svg-container" style="opacity: 1">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="34"  height="34"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-player-play"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" /></svg>
@@ -164,9 +164,13 @@
       </div>
     </div>
   </div>
+
+  <br/>
+  <p class="lead text-center" >All our voices are opened for 5k chars per day for free!
+    <br/>Then, for extended & commercial use, our <a target="_blank" href="/upgrade/">premium plan</a> is <strong>only <u>$39</u> per year</strong> - that is literally <strong>ONE THIRD</strong> of the price offered by NaturalReaders for example. And the best part? It's <strong>non recurring</strong>! - So you don't need to remember to cancel in the future.</p>
 </section>
 
-<section id="portfolio" class="section section-sm">
+<section class="section section-sm">
   <br/>
   <div class="container">
 
@@ -190,10 +194,35 @@
   </div>
 </section>
 
+<section id="offering" class="section section-sm">
+  <br/>
+  <div class="container">
+    <div style="max-width: 900px;margin: auto; font-size: larger; text-align: justify">
+      <h2 class="h2 text-center" >Best Offering On The Market - Guaranteed!</h2>
+      <br/>
+      <p><b>TTSReader</b> Offers the best text-to-speech offering on the market. Best voices & player experience combined with the <strong>best premium-plan price</strong> available.</p>This is due to our text-player offering the best-in-class AI voices free of charge for limited use and a Premium upgrade offered at a fraction of a price
+      <p><b>Best Voices</b> - we bring the best AI voices in the world, by the leading tech giants - such as Microsoft, OpenAI, Google, ElevenLabs.</p>
+      <p><b>Best Price & Plan - by Far</b> -
+        We offer a free plan, including for the premium voices, for limited use.
+      </p>
+
+      <h4 style="margin-top: 40px;">Guaranteed!</h4>
+      <p>
+        If you find a better premium-price offering for a similar text-to-speech player, we will match it. If you upgrade and for any regret your purchase - we will refund 100%.
+      </p>
+
+      <h4>Upgrade</h4>
+      <p>Click this link to upgrade to TTSReader Premium at a single non-recurring - no-surprises payment. <a href="/upgrade/" target="_blank">Upgrade TTSReader</a>.</p>
+    </div>
+
+
+  </div>
+</section>
+
 <section id="about" class="section section-sm bg-light">
   <br/>
   <div class="container">
-    <div style="max-width: 600px;margin: auto; font-size: larger; text-align: justify">
+    <div style="max-width: 900px;margin: auto; font-size: larger; text-align: justify">
       <h2 class="h2 text-center" >About</h2>
       <br/>
       <p><b>TTSReader</b> is a browser-based text-to-speech player (more than just a simple text-to-speech converter) that instantly reads out loud texts, PDFs, ebooks, and webpages using natural-sounding AI voices — no downloads, no installation, and no sign-in required. It works out of the box and remembers your progress across sessions, so you can seamlessly continue listening from where you left off.
