--- a/layouts/partials/head/opengraph.html
+++ b/layouts/partials/head/opengraph.html
@@ -8,7 +8,7 @@
 {{ else -}}
   <meta property="og:url" content="{{ .Permalink }}">
 {{ end -}}
-{{ with .Site.Params.title -}}
+{{ with .Site.Params.name -}}
   <meta property="og:site_name" content="{{ . }}">
 {{ end -}}
 
