--- a/layouts/mobile/single.html
+++ b/layouts/mobile/single.html
@@ -9,7 +9,7 @@
       <br/>
       <p><strong>Update 2025-May-15: As of today, our new text-to-speech player works amazingly well on mobile browsers as well. It can also be installed on your mobile device as an app - either by saving the link to the home screen, or by clicking the 'install' as a PWA (Progressive Web App). So, for most users - simply use the web version on your mobile as well. Get it on <a href="/player/">https://ttsreader.com/player/</a>. Some users will still find our mobile apps more comfortable. We're working on updating our mobile apps.</strong></p>
       <br/>
-      <p style="text-align: center"><a class="btn-primary btn-lg btn" style="text-transform: uppercase">Open Player on Mobile</a></p>
+      <p style="text-align: center"><a class="btn-primary btn-lg btn" style="text-transform: uppercase" href="/player/">Open Player on Mobile</a></p>
       <br/>
 
       <div style="text-align: center; margin: 10px auto 60px">
